# ml-flashpoint-clone

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  README.md  cloudbuild.yaml  mkdocs.yml  pyproject.toml  run_coverage.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-and-test.yml  docs-site.yml  post-coverage-comment.yml
docs/: .example-syntax.md  README.md  changelog.md  overview.md  troubleshooting.md  user-guide.md
scripts/: README.md  create_release.py  parse_log_and_summarize.py  parse_log_and_summarize_nemo.py
src/ml_flashpoint/: __init__.py
src/ml_flashpoint/adapter/megatron/: __init__.py  load_strategies.py  save_strategies.py  save_utils.py
src/ml_flashpoint/adapter/nemo/: auto_resume.py  checkpoint_callback.py  checkpoint_io.py  event_logging_callback.py  nemo_checkpoint_loader.py  wrapper_util.py
src/ml_flashpoint/adapter/pytorch/: custom_state_dict_saver.py  memory_storage_reader.py  memory_storage_writer.py
src/ml_flashpoint/checkpoint_object_manager/: buffer_io.py  buffer_metadata.py  checkpoint_object_manager.py
src/ml_flashpoint/checkpoint_object_manager/buffer_object/: CMakeLists.txt  bindings.cpp  buffer_helper.cpp  buffer_helper.h  buffer_object.cpp  buffer_object.h
src/ml_flashpoint/core/: buffer_pool.py  checkpoint_id_types.py  checkpoint_loader.py  checkpoint_saver.py  defaults.py  hfid.py  mlf_logging.py  tensor_header.py  utils.py
src/ml_flashpoint/replication/: replication_manager.py
src/ml_flashpoint/replication/transfer_service/: CMakeLists.txt  bindings.cpp  connection_pool.cpp  connection_pool.h  mlf_log_sink.cpp  mlf_log_sink.h  net_util.cpp  net_util.h  protocol.h  pybind11_futures.h  task.cpp  task.h  task_queue.h  thread_pool.cpp  thread_pool.h  transfer_helpers.cpp  transfer_helpers.h  transfer_service.cpp  transfer_service.h
tests/: fake-cpp.md  fake-py.md  test_foo.py  watcher
tests/adapter/megatron/: test_load_strategies.py  test_save_strategies.py
tests/adapter/nemo/: test_auto_resume.py  test_checkpoint_callback.py  test_checkpoint_io.py  test_event_logging_callback.py  test_nemo_checkpoint_loader.py  test_wrapper_util.py
tests/adapter/pytorch/: test_custom_state_dict_saver.py  test_memory_storage_reader.py  test_memory_storage_writer.py
tests/checkpoint_object_manager/: test_buffer_io.py  test_checkpoint_object_manager.py
tests/checkpoint_object_manager/buffer_object/: buffer_helper_test.cpp  buffer_object_test.cpp  test_buffer_object_bindings.py
tests/core/: test_buffer_pool.py  test_checkpoint_id_types.py  test_checkpoint_loader.py  test_checkpoint_saver.py  test_hfid.py  test_mlf_logging.py  test_utils.py
tests/replication/: test_pairwise_replication_strategy.py  test_replication_manager.py  test_replication_manager_e2e.py  test_transer_service.py
tests/replication/transfer_service/: connection_pool_test.cpp  mlf_log_sink_test.cpp  net_util_test.cpp  protocol_test.cpp  task_queue_test.cpp  task_test.cpp  thread_pool_test.cpp  transfer_helpers_test.cpp  transfer_service_p2p_test.cpp  transfer_service_test.cpp
