# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# ===================================================================
# PEP 621: Project Metadata
# This section defines the core information about your package.
# This is what will be displayed on PyPI.
# ===================================================================
[project]
name = "ml-flashpoint"
dynamic = [ "version" ]
description = "A memory-first, lightning fast, easy-to-use ML checkpointing library."
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# Specifies the minimum version of Python required to install and run this package.
requires-python = ">=3.10"

# A list of core runtime dependencies. These packages will ALWAYS be installed
# when a user runs `pip install ml-flashpoint`.
dependencies = [
    "typing-extensions==4.15.0",
]


# ===================================================================
# Tool-specific Configuration for Ruff
# ===================================================================
[tool.ruff]
# Set the maximum line length for both linter and formatter
line-length = 120
# Enable Pyflakes, Pycodestyle, and other standard rules
lint.select = ["E", "F", "W", "I"]
# Add the format pseudo-linter
lint.extend-select = ["RUF100"]

exclude = [
    ".gemini",
    ".worktrees",
]

# ===================================================================
# Tool-specific Configuration for pytest
# ===================================================================
[tool.pytest.ini_options]
norecursedirs = [
    ".git",
    "build/**/_deps",
    ".gemini",
    ".worktrees",
]
markers = [
    "e2e: marks tests as end-to-end",
    "smoke: quick subset of tests",
]

# ===================================================================
# ===================================================================
# Tool-specific Configuration for python coverage
# ===================================================================
[tool.coverage.report]
fail_under = 90

# ===================================================================
# Tool-specific Configuration for cxx coverage
# ===================================================================
[tool.gcovr]
fail-under-line = "80"
#fail-under-branch = "85"

